# vstools

./: .gitignore  AUTHORS  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  setup.py  tox.ini  vstools.ini
.github/workflows/: test_docker.yml  test_tox.yml
config/appveyor/: install.ps1
config/pylint/: spelling-private-dict
config/travis/: install.sh  run_coverage.sh  run_pylint.sh  runtests.sh
scripts/: msvscpp-convert.py
tests/: libyal.py  py2to3.py  readers.py  resources.py  solutions.py  test_lib.py  writers.py
utils/: update_dependencies.py  update_release.sh  update_version.sh
vstools/: __init__.py  definitions.py  libyal.py  py2to3.py  readers.py  resources.py  solutions.py  writers.py
vstools/scripts/: msvscpp_convert.py
