[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vstools"
version = "20251125"
description = "Visual Studio tools for the libyal projects"
maintainers = [
    { name = "Joachim Metz", email = "joachim.metz@gmail.com" },
]
license = "Apache-2.0"
license-files = ["ACKNOWLEDGEMENTS", "AUTHORS", "LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.10"

[project.scripts]
msvscpp_convert = "vstools.scripts.msvscpp_convert:Main"

[project.urls]
Homepage = "https://github.com/libyal/vstools"
Repository = "https://github.com/libyal/vstools"

[tool.setuptools.packages.find]
where = ["."]
include = ["vstools"]
exclude = ["docs", "tests", "tests.*", "utils"]
