[metadata]
name = vstools
version = 20241008
description = Visual Studio tools for the libyal projects
long_description = Visual Studio tools for the libyal projects.
long_description_content_type = text/plain
url = https://github.com/libyal/vstools
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  vstools = vstools
packages = find:
python_requires = >=3.8
scripts =
  scripts/msvscpp-convert.py

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_wheel]
universal = 1
